cabal-version:       2.4

name:                moon
version:             0.0.0.1
synopsis:            Infrastructure as Haskell code
-- description:
homepage:            https://github.com/jerbaroo/moon
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              jerbaroo
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Development
extra-source-files:  CHANGELOG.md, README.org

library
  exposed-modules:     Moon
  -- other-modules:
  -- other-extensions:
  build-depends:       base, containers, pretty-simple, text
  hs-source-dirs:      src
  default-language:    Haskell2010

executable moon
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, moon
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite moon-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MoonTest.hs
  build-depends:       base
